Fix broken css image
Fix

--- a/css/style.css
+++ b/css/style.css
@@ -1160,7 +1160,7 @@ a.brand:focus{
   bottom: -15%;
   width: 101%;
   height: 57.2%;
-  background:url(felipunky.github.io/Images/bg/dots.png) 0 0 repeat;
+  background:url(Images/bg/dots.png) 0 0 repeat;
 }
 
 .experience-box{
